--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="calculator sum-calculator">
     <h1><strong>Calculadora de Soma</strong></h1>
     <div class="input-group">
-        <input type="text" id="expression" placeholder="Digite a expressão">
+        <input type="text" id="expression" placeholder="Digite a expressão. Ex: 1+2+3+4">
     </div>
     <div id="sum-result" class="sum-result">Resultado: R$ 0,00</div>
     <textarea id="expression-copy" readonly></textarea>
