--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
             <div id="error-message" class="error-message"></div>
             <div id="results">
                 <div id="result-12" class="result-item">
-                    <div class="result-label">Resp. AFL</div>
+                    <div class="result-label">Responsável</div>
                     <div class="result-content">
                         <div id="result-12-value" class="result-value">R$ 0,00</div>
                         <div class="percentage">12%</div>
                     </div>
                 </div>
                 <div id="result-10" class="result-item">
-                    <div class="result-label">Líder AFL</div>
+                    <div class="result-label">Auxiliar</div>
                     <div class="result-content">
                         <div id="result-10-value" class="result-value">R$ 0,00</div>
                         <div class="percentage">10%</div>
                     </div>
                 </div>
                 <div id="result-8" class="result-item">
-                    <div class="result-label">Sub. Líder AFL</div>
+                    <div class="result-label">Líder</div>
                     <div class="result-content">
                         <div id="result-8-value" class="result-value">R$ 0,00</div>
                         <div class="percentage">8%</div>
                     </div>
                 </div>
                 <div id="result-7" class="result-item">
-                    <div class="result-label">Aux. AFL</div>
+                    <div class="result-label">Sub. Líder</div>
                     <div class="result-content">
                         <div id="result-7-value" class="result-value">R$ 0,00</div>
                         <div class="percentage">7%</div>
